# raytracer

./: .gitignore  Cargo.toml  README.md  config.toml  scene_config.toml
assets/: model.gltf  raytracer-text.blend  required_scene.blend  required_text.mtl
assets/cat/: oiiaioooooiai_cat.mtl
src/: asset_loader.rs  camera.rs  circle.rs  color.rs  color_utils.rs  common.rs  hittable.rs  hittable_list.rs  lib.rs  light.rs  main.rs  material.rs  obj.rs  plane.rs  ray.rs  renderer.rs  scene.rs  sphere.rs  texture.rs  triangle.rs  vec3.rs  vector.rs  world.rs
src/app/: animation.rs  args.rs  config.rs  mod.rs  run.rs
src/bvh/: aabb.rs  bvhnode.rs
src/core/: camera.rs  color.rs  common.rs  ray.rs  vec3.rs
src/io/: asset_loader.rs  obj.rs
src/material/: material.rs  texture.rs
src/objects/: hittable.rs  light.rs  sphere.rs  triangle.rs  world.rs
src/renderer/: renderer.rs  scene.rs
src/scenes/: custom_scene.rs  mod.rs  obj.rs  required_scene.rs
