[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"

[dependencies]
minifb = "0.28.0"
rand = "0.9.0"
rayon = "1.10.0"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
anyhow = "1.0"

[dependencies.gltf]
version = "1.4"
features = ["extras", "names", "KHR_lights_punctual"]

[lib]
name = "raytracer"
path = "src/lib.rs"
