[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"

[dependencies]
minifb = "0.28.0"
rand = "0.9.0"
rayon = "1.10.0"
clap = { version = "4.4", features = ["derive"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
image = "0.24"
tempfile = "3"
tobj = "4"
regex = "1"

[dependencies.gltf]
version = "1.4"
features = ["extras", "names", "KHR_lights_punctual"]

[lib]
name = "raytracer"
path = "src/lib.rs"
